# PlumeImpactor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
apps/plumeimpactor/: Cargo.toml  build.rs
apps/plumeimpactor/src/: frame.rs  handlers.rs  keychain.rs  main.rs
apps/plumeimpactor/src/pages/: default.rs  install.rs  login.rs  mod.rs  work.rs
apps/plumeimpactor/src/screen/: general.rs  mod.rs  package.rs  settings.rs
apps/plumesign/: Cargo.toml
apps/plumesign/src/: main.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/grand_slam/: Cargo.toml  README.md
crates/grand_slam/src/: lib.rs
crates/grand_slam/src/auth/: anisette_data.rs  mod.rs
crates/grand_slam/src/auth/account/: login.rs  mod.rs  request.rs  token.rs  two_factor_auth.rs
crates/grand_slam/src/developer/: mod.rs
crates/grand_slam/src/developer/qh/: account.rs  app_groups.rs  app_ids.rs  certs.rs  devices.rs  mod.rs  teams.rs
crates/grand_slam/src/developer/v1/: app_ids.rs  capabilities.rs
crates/ldid2/: Cargo.toml
crates/ldid2/src/: certificate.rs  lib.rs  macho.rs  provision.rs
crates/ldid2/src/signing/: mod.rs  signer.rs  signer_settings.rs
crates/plume_gestalt/: Cargo.toml  build.rs
crates/plume_gestalt/src/: lib.rs
crates/plume_types/: Cargo.toml
crates/plume_types/src/: i18n.rs  lib.rs  package.rs
crates/types/: Cargo.toml
crates/types/src/: bundle.rs  device.rs  lib.rs  package.rs
patches/: srp+0.6.0.patch
