[package]
name = "plumeimpactor"
description = "GUI for sideloading apps onto Apple devices"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
idevice.workspace = true
tokio.workspace = true
ldid2 = { path = "../../crates/ldid2" }
grand_slam = { path = "../../crates/grand_slam", features = ["vendored-botan"] }
types = { path = "../../crates/types"}
wxdragon = "0.8.30"
image = { version = "0.25.1", default-features = false, features = ["png"] }
futures = "0.3.31"

# Keyrings
[target.'cfg(all(debug_assertions, target_os = "macos"))'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(all(not(debug_assertions), target_os = "macos"))'.dependencies]
keyring-core = { version = "0.7.0" }
apple-native-keyring-store = { version = "0.2.1", features = ["protected"] }
# keyring-core requires notarization with entitlements to work properly on macOS (release)

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["sync-secret-service"] }

[build-dependencies]
embed-manifest = "1.4"
