[package]
name = "errors"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
idevice.workspace = true
plist.workspace = true
thiserror.workspace = true
zip.workspace = true
pem.workspace = true
x509-certificate.workspace = true
apple-codesign.workspace = true
reqwest.workspace = true
omnisette.workspace = true
serde_json.workspace = true
