[package]
name = "ldid2" # sinners_road
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pem.workspace = true
x509-certificate.workspace = true
apple-codesign.workspace = true
plist.workspace = true
errors = { path = "../errors" }
types = { path = "../types" }
