[package]
name = "types"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
idevice.workspace = true
thiserror.workspace = true
plist.workspace = true
zip.workspace = true
tokio.workspace = true
uuid.workspace = true
errors = { path = "../errors" }
